--- a/02-express-tutorial/package.json
+++ b/02-express-tutorial/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.4",
     "express": "^4.22.1",
     "morgan": "^1.10.1"
   },
